CSS fix for devotionals

--- a/app/assets/sass/_split_pane.sass
+++ b/app/assets/sass/_split_pane.sass
@@ -80,6 +80,13 @@
   position: absolute
   top: 9px
 
+.split_devotional_pane form
+  position: static !important
+  margin-top: 10px
+.split_devotional_pane .embedded_reader 
+  margin-top: 5px !important
+
+
 .subscription_plan_links p
   margin: 10px 0 0 0
 
@@ -92,5 +99,5 @@
   background: url(../images/icon_copyright.png) no-repeat left center
   padding: 5px 5px 5px 22px
   margin-bottom: 10px
-
   display: block
+
