added audio bible support

--- a/app/views/shared/_menu_audio_player.html.haml
+++ b/app/views/shared/_menu_audio_player.html.haml
@@ -4,11 +4,6 @@
   %dl
     %dt
       %a.close{:href => '#'} Close
-      NIV Listener's Bible
+      = @reference.audio ? @reference.audio.title : t("no audio bible")
     %dd
-      %audio#audio_player{:src => '/mp3/test.mp3', :type => 'audio/mp3', :controls => 'controls'}
-    %dt
-      %a.float_right.negative_gutter_top_quarter{:href => '#'}
-        %img{:src => '/images/icon_info.png'}
-      %small
-        Copyright 2011 ACME Corporation
+      %audio#audio_player{:src => @reference.audio ? @reference.audio.url : "", :type => 'audio/mp3', :controls => 'controls'}
