--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -49,7 +49,7 @@
             =t("ref.settings")
       %li.hide_in_parallel_mode
         %a.button.dynamic_menu_trigger{:href => '#menu_audio_player', :title => t("ref.listen")}
-          %span.icon_listen
+          %span.icon_listen{class: @reference.audio ? nil : "disabled"}
             =t("ref.listen")
       %li.hide_in_parallel_mode
         %a.button#button_full_screen{:href => '#', :title => t("ref.full screen")}
