moving mediaelement js to head
Change-Id: Ie0e60ff71419ade1e04100f49c03891a5bc8e3ed

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -6,6 +6,7 @@
   =t("youversion")
   
 
+%script{:src => '/javascripts/mediaelement-and-player.min.js'}
 <!--[if lt IE 9]>
 %script{:src => '/javascripts/html5.js'}
 <![endif]-->
