--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -7,6 +7,7 @@
 %script{:src => '/javascripts/color_picker/colorpicker.js'}
 %script{:src => '/javascripts/ZeroClipboard.js'}
 %script{:src => '/javascripts/charCount.js'}
+%script{:src => '/javascripts/mediaelement-and-player.min.js'}
 
 
 - if content_for? :javascripts
