trying audio/mpeg for safari
Change-Id: I5ef0adca542a95be482a128a60fdd11cc855e171

--- a/app/views/shared/_menu_audio_player.html.haml
+++ b/app/views/shared/_menu_audio_player.html.haml
@@ -6,4 +6,4 @@
       %a.close{:href => '#'}= t("audio.close player menu")
       = @reference.audio ? @reference.audio.title : t("audio.none")
     %dd
-      %audio#audio_player{:src => @reference.audio ? @reference.audio.url : "", :type => 'audio/mp3', :controls => 'controls'}
+      %audio#audio_player{:src => @reference.audio ? @reference.audio.url : "", :type => 'audio/mpeg', :controls => 'controls'}
