--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -1,7 +1,7 @@
 %article
   #bookmark
-    %h1= @bookmark.title
-    %p.mute= link_to_references([@bookmark.reference])
+    %h3= @bookmark.title
+    %p.mute= link_to_references(@bookmark.reference_list)
     %p{class: "date"}= @bookmark.created_as_date.strftime("%m/%d/%Y")
     %p
     -#= button_to(@bookmark.likes(:user_id => current_user.id).nil? ? 'like' : 'unlike', like_path(@note.id), :method => :put) if @note.user_status == 'public' && current_user
