audio disabled icon loaded and pretty. Need Chad to remove the .dynamic_menu_trigger to finish it off

--- a/app/assets/sass/_ui_elements.sass
+++ b/app/assets/sass/_ui_elements.sass
@@ -300,7 +300,10 @@
   .li_active &
     background:
       position: center -47px !important
-
+.icon_listen.disabled
+  background:
+    image: url(../images/icon_listen.png)
+    position: center -80px !important
 .icon_parallel
   background:
     image: url(../images/icon_parallel.png)
