--- a/app/views/plans/calendar.html.haml
+++ b/app/views/plans/calendar.html.haml
@@ -52,7 +52,7 @@
                       %span.inactive-day{class: cur_date == current_date ? "today" : ""}= cur_date.day.to_s
                 - else
                   - cur_status = statuses.delete_at(0)
-                  %td.active-day{class: (cur_status.completed ? 'read' : !cur_status.references_completed.empty? ? 'inactive-day partial' : 'inactive-day') << ((cur_date == current_date) ? ' today' : '')}
+                  %td.active-day{class: (cur_status.completed ? 'read' : !cur_status.references_completed.empty? ? 'partial' : '') << ((cur_date == current_date) ? ' today' : '')}
                     = link_to(cur_date.day.to_s, plan_path(@subscription.slug, day: cur_status.day))
                 - cur_date = cur_date.next
 
