audio disabled fixed

--- a/app/assets/sass/_ui_elements.sass
+++ b/app/assets/sass/_ui_elements.sass
@@ -153,6 +153,16 @@
   +background-image(linear-gradient(#f1efec, #e0dedb))
   background-color: #e0dedb
 
+.disabled.button:hover
+  +box-shadow(#fff 0 1px 0 0)
+  +background-image(linear-gradient(#fff, #dddcda))
+  background-color: #eeedeb
+  
+.disabled.button:active
+  +box-shadow(#fff 0 1px 0 0)
+  +background-image(linear-gradient(#fff, #dddcda))
+  background-color: #eeedeb
+
 .button:active,
 .button:focus
   +glow
