--- a/app/assets/sass/_ui_elements.sass
+++ b/app/assets/sass/_ui_elements.sass
@@ -157,7 +157,7 @@
   +box-shadow(#fff 0 1px 0 0)
   +background-image(linear-gradient(#fff, #dddcda))
   background-color: #eeedeb
-  
+
 .disabled.button:active
   +box-shadow(#fff 0 1px 0 0)
   +background-image(linear-gradient(#fff, #dddcda))
@@ -440,10 +440,11 @@ dd .icon_settings
 .cal_month td.read 
   color: #444
   font-weight: bold
-  background: none
+  text-decoration: line-through
 
 .cal_month td.read a 
   color: #444
+  background: none
 
 .cal_month td .inactive-day
   color: #aaa
