sign in padding fix

--- a/app/assets/sass/_header.sass
+++ b/app/assets/sass/_header.sass
@@ -156,6 +156,9 @@
   text-overflow: ellipsis
   white-space: nowrap
 
+#header nav .sign_in
+  padding: 10px
+
 #header_profile_trigger img
   +border-radius(2px)
   border: 1px solid
@@ -190,3 +193,4 @@
     position: 38px center
   display: block
   padding: 5px 0 5px 47px
+
