--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -20,7 +20,7 @@
               %a{:href => sign_out_path}
                 =t("sign out")
         - else
-          %p= link_to t("sign in"), sign_in_path
+          %p= link_to t("sign in"), sign_in_path, :class=> "sign_in"
 
 
 
