bookmark editing menu now reveals on hover, style chagnes

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -406,3 +406,10 @@
     margin-right: 10px
   &>div
     float: left
+
+// `Type
+//---------------------------------------------------------------------------------------
+
+#main h2
+  font-weight: bold
+  font-size: 25px
