--- a/app/assets/sass/_split_pane.sass
+++ b/app/assets/sass/_split_pane.sass
@@ -80,12 +80,15 @@
   position: absolute
   top: 9px
 
+
+//
+// Reading Plans
+//
 .split_devotional_pane form
   position: static !important
   margin-top: 10px
 .split_devotional_pane .embedded_reader 
   margin-top: 5px !important
-
 
 .subscription_plan_links p
   margin: 10px 0 0 0
