fixed password button string, closes #50

--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -15,4 +15,4 @@
     %br
     = f.password_field :password_confirm
   %p
-    = f.submit t('users.change my password')
+    = f.submit t('users.my password')
