fixed picture button, closes #49

--- a/app/views/users/picture.html.haml
+++ b/app/views/users/picture.html.haml
@@ -11,6 +11,6 @@
     %br
     = t('users.profile.avatar help')
   %p
-    = f.submit t('users.update my picture')
+    = f.submit t('my picture')
 
 
