--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -20,3 +20,26 @@
               %a{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= kk.upcase
             %td
               %a{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= vv.title
+#menu_alt_version.dynamic_menu
+  %span.menu_arrow
+    &nbsp;
+  .scroll
+    %table
+      %tr
+        %th{:colspan => '2'}= @alt_version.language.human
+      - @this_language.each do |k, v|
+        %tr
+          %th
+            %a.alt_version_link{"data-version" => v.osis, :href => '#'}= k.upcase #JS will set cookie and reload page
+          %td
+            %a.alt_version_link{"data-version" => v.osis, :href => '#'}= v.title #JS will set cookie and reload page
+      - @all_languages.each do |k, v|
+        %tr
+          %th{:colspan => '2'}= @languages[k]
+        - v.each do |kk, vv|
+          %tr
+            %th
+              %a.alt_version_link{"data-version" => vv.osis, :href => '#'}= kk.upcase #JS will set cookie and reload page
+            %td
+              %a.alt_version_link{"data-version" => vv.osis, :href => '#'}= vv.title #JS will set cookie and reload page
+
