--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -8,7 +8,7 @@
       - @this_language.each do |k, v|
         %tr
           %th
-            %a{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= k.upcase
+            %a{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= k.upcase.match(/\A[^-]*/)
           %td
             %a{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= v.title
       - @all_languages.each do |k, v|
@@ -17,7 +17,7 @@
         - v.each do |kk, vv|
           %tr
             %th
-              %a{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= kk.upcase
+              %a{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= kk.upcase.match(/\A[^-]*/)
             %td
               %a{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= vv.title
 #menu_alt_version.dynamic_menu
@@ -30,7 +30,7 @@
       - @this_language.each do |k, v|
         %tr
           %th
-            %a.alt_version_link{"data-version" => v.osis, :href => '#'}= k.upcase #JS will set cookie and reload page
+            %a.alt_version_link{"data-version" => v.osis, :href => '#'}= k.upcase.match(/\A[^-]*/) #JS will set cookie and reload page
           %td
             %a.alt_version_link{"data-version" => v.osis, :href => '#'}= v.title #JS will set cookie and reload page
       - @all_languages.each do |k, v|
@@ -39,7 +39,7 @@
         - v.each do |kk, vv|
           %tr
             %th
-              %a.alt_version_link{"data-version" => vv.osis, :href => '#'}= kk.upcase #JS will set cookie and reload page
+              %a.alt_version_link{"data-version" => vv.osis, :href => '#'}= kk.upcase.match(/\A[^-]*/) #JS will set cookie and reload page
             %td
               %a.alt_version_link{"data-version" => vv.osis, :href => '#'}= vv.title #JS will set cookie and reload page
 
