--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -222,7 +222,7 @@ input[type="week"]
   +round
   +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, #eeedeb 0 0 0 5px)
   +background-image(linear-gradient(#fff, #eee))
-  padding: 7px 10px
+  padding: 7px 0 7px 10px 
   height: 35px
 
 
