--- a/app/views/users/_user_info.html.haml
+++ b/app/views/users/_user_info.html.haml
@@ -11,4 +11,4 @@
         - if user.location
           %li.icon_small_location= user.location
         - if user.website
-          %li.icon_small_link= user.website
+          %li.icon_small_link= link_to user.website, user.website
