--- a/app/views/bookmarks/_list_item.html.haml
+++ b/app/views/bookmarks/_list_item.html.haml
@@ -1,5 +1,5 @@
 %li{class: ("li_bookmark" if display == :icon)}
-  .float_left
+  .float_left{style: "width: 100%;"}
     %p.gutter_bottom_half
       %b{class: ("highlight" if list_item.highlight_color), style: ("background-color: ##{list_item.highlight_color}" if list_item.highlight_color)}= list_item.title
       - list_item.reference_list.each do |r|
@@ -8,15 +8,15 @@
             %a{href: bible_path(r)}= r
           %br
           = r.contents[0]
-    - if list_item.labels
-      %p.small
-        - list_item.labels.split(",").each do |l|
-          - #TODO: split labels in model
-          %a{href: "#"}= l
-          - # TODO: Label link
   .bookmark_edit.float_right
     %p
       - if @me
         = link_to('edit', edit_bookmark_path(list_item.id))
         = link_to('delete', bookmark_path(list_item.id), :confirm => 'Are you sure?', :method => :delete, :style => 'color: red') 
-      = list_item.created_as_date
+      %span.created_as_date= t('created ago', time_ago: time_ago_in_words(list_item.created_as_date))
+  - if list_item.labels
+    %p.small
+      - list_item.labels.split(",").each do |l|
+        - #TODO: split labels in model
+        %a{href: "#"}= l
+        - # TODO: Label link
