--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -1,24 +1,24 @@
 = form_for @note do |f|
-  - if @note.errors
+  - if @note.errors.any?
     .form_errors
       =t("notes.creation form errors")
       %ul
         - @note.errors.each do |e|
           %li= e
   %p
-    = f.label :title, t("notes.title field")
+    = f.label :title, t("notes.title field"), style: "display: block"
     = f.text_field :title
   %p
-    = f.label :content, t("notes.content field")
+    = f.label :content, t("notes.content field"), style: "display: block"
     = f.text_area :content
   %p
-    = f.label :version, t("notes.version field")
+    = f.label :version, t("notes.version field"), style: "display: block"
     = f.select :version, options_for_select(versions_dropdown, @note.version), {:prompt => t("notes.select from list")}
   %p
-    = f.label :reference, t("notes.reference field")
-    = f.text_field :reference
+    = f.label :reference, t("notes.reference field"), style: "display: block"
+    = @note.reference_list.map{|r| link_to(r, bible_path(r))}.join(", ").html_safe
   %p
-    = f.label :user_status, t("notes.status field")
+    = f.label :user_status, t("notes.status field"), style: "display: block"
     = f.select :user_status, options_for_select(object_status, @note.user_status)
   %p
-    = f.submit t("notes.save")
+    .float_right= f.submit t("notes.save")
