--- a/app/cells/notes_list_widget/display.html.haml
+++ b/app/cells/notes_list_widget/display.html.haml
@@ -9,7 +9,7 @@
           %tr
             %th
             %td.align_right
-              %a.more_arrow= link_to "See all #{@notes.total} notes", @link
+              %a.more_arrow{href: @link}= t('show all notes', total: @notes.total)
 
         %tbody
           - @notes.first(4).each do |note|
