move avatars to the top of notes reader widget, closes #95

--- a/app/assets/sass/_widgets.sass
+++ b/app/assets/sass/_widgets.sass
@@ -68,7 +68,6 @@
 
 .widget th,
 .widget td
-  vertical-align: middle
   padding: 10px 15px
 
 .widget th
@@ -82,7 +81,7 @@
 
 .widget tbody th
   background:
-    position: right center
+    position: right top
 
 .widget tfoot th
   background:
