--- a/app/assets/sass/_vars.sass
+++ b/app/assets/sass/_vars.sass
@@ -11,6 +11,7 @@ $gray_medium: #807f83
 $gray_light: #eeedeb
 $green: #73a03d
 $blue: #0084c8
+$red: #c90000
 $blue_light: lighten($blue, 15%)
 $blue_dark: darken($blue, 15%)
 $body_text: #444
