--- a/app/views/notes/show.html.haml
+++ b/app/views/notes/show.html.haml
@@ -13,4 +13,4 @@
       / = button_to(@note.likes(:user_id => current_user.id).nil? ? t("likes.like button text") : t("likes.unlike button text"), like_path(@note.id), :method => :put) if @note.user_status == 'public' && current_user
     - if current_auth && (current_auth.user_id.to_i == @note.user_id.to_i)
       = link_to(t("notes.edit"), edit_note_path(@note.id)) 
-      = link_to(t("notes.delete"), note_path(@note.id), :confirm => t("notes.confirm delete"), :method => :delete)
+      .caution= link_to(t("notes.delete"), note_path(@note.id), :confirm => t("notes.confirm delete"), :method => :delete)
