--- a/app/assets/sass/_dynamic_menus.sass
+++ b/app/assets/sass/_dynamic_menus.sass
@@ -43,7 +43,7 @@
 
 .dynamic_menu .scroll
   border-right: 0
-  height: 340px
+  height: 740px
   overflow-x: hidden
   overflow-y: scroll
 
@@ -57,6 +57,9 @@
 
 .dynamic_menu .scroll::-webkit-scrollbar-thumb:hover
   background: #ccc
+
+.dynamic_menu .scroll 
+  font-size: 13px
 
 .dynamic_menu table,
 .dynamic_menu ul,
