added highlights tweaks; fixes #58

--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -1,4 +1,5 @@
 %script{:src => '/javascripts/jquery.js'}
+%script{:src => '/javascripts/spin.min.js'}
 %script{:src => '/javascripts/application.js'}
 %script{:src => '/javascripts/rails.js'}
 - #  %script{:src => 'http://include.reinvigorate.net/re_.js'}
