--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -1,4 +1,4 @@
-- @title = "#{t('users.manage notifications')} | #{@user.name || @user.username}"
+- @title = "#{t('my notifications')} | #{@user.name || @user.username}"
 
 = form_for @notification_settings, url: notifications_path do |n|
   %p
@@ -18,3 +18,5 @@
     = n.label :reading_plans, t('users.notifications.reading_plans')
   %p
     = n.submit t('users.notifications.update')
+  - if params[:token]
+    = hidden_field_tag :token, params[:token]
