--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -243,6 +243,7 @@
 
 .verse.selected
   background: #ddd !important
+  color: $body_text !important
 
 .verse
   border-radius: 4px
@@ -268,6 +269,9 @@
     right: 2px
   padding: 2px 4px 3px
   vertical-align: top
+
+.verse.dark_highlight
+  color: $gray_light
 
 // `Nav Arrows
 //----------------------------------------------------------------------------------------------------
