--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -147,6 +147,12 @@ button + button,
 button + select
   margin-left: 15px
 
+  
+label + input,
+label + select,
+label + textarea
+  margin-top: 5px
+
 // `Form Overrides
 //----------------------------------------------------------------------------------------------------
 
