--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -18,7 +18,7 @@
     = render(partial: "user_info", locals: {user: @user})
     = render partial: "user_tabs", locals: {selected: @selected}
   %article
-    %h1= t("my #{@selected.to_s}")
+    %h1= @me ? t("users.my #{@selected.to_s.gsub('_', ' ')}") : t("users.user #{@selected.to_s.gsub('_', ' ')}", user: @user.name || @user.username)
     = content_for?(:user_main) ? yield(:user_main) : yield
 
 = render template: 'layouts/application'
