copy mostly done (no fallback or confirmation)

--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -177,7 +177,8 @@ input[type="reset"]:focus,
 button:active,
 input[type="button"]:active,
 input[type="submit"]:active,
-input[type="reset"]:active
+input[type="reset"]:active,
+button.hover
   +background-image(linear-gradient(#fff, #e0e0e0 1px, #bebebe))
   background-color: #bebebe
   border-color: #838383
@@ -189,7 +190,8 @@ input[type="reset"]:focus,
 button:active,
 input[type="button"]:active,
 input[type="submit"]:active,
-input[type="reset"]:active
+input[type="reset"]:active,
+button.active
   +box-shadow(inset rgba(#000, 0.5) 0 1px 3px 0)
   color: #005d8d
 
