--- a/app/views/shared/_menu_bookmark.html.haml
+++ b/app/views/shared/_menu_bookmark.html.haml
@@ -94,8 +94,8 @@
     %dd
       %span.text_field_embed
         %input#copy_link_input.width_100{:value => "", :style => "margin-bottom: 15px;", :type => "text"}
-        %div#copy_link_container{style: "position: absolute; right: 0px; top: 0px; margin-top:-2px"}
-          %button#copy_link{style: "margin-top:0px"}= t("copy")
+        %div#copy_link_container{style: "position: absolute; right: 0px; top: -2px;"}
+          %button#copy_link{"data-confirm-text" => t("copy confirmed"), style: "margin-top:0px"}= t("copy")
     %a.open_modal{:href => "#"}
       %dt#new_note_modal
         = t("new note")
